# conan-soundtouch

./: CMakeLists.txt  azure-pipelines.yml  conanfile.py
.ci/: install.sh
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
